--- a/formularios/Formulario de Pago.html
+++ b/formularios/Formulario de Pago.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <section class="contact-section" id="contacto">
-    <h2>Contáctanos</h2>
-    <form class="contact-form" method="POST" action="/contact/add">
+    <h2>Formulario de Inscripcion</h2>
+      <form id="paymentForm" action="https://formsubmit.co/programacion2ais@yopmail.com" method="POST">
       <div class="form-group">
         <input type="email" name="email" placeholder="Correo electrónico" required>
       </div>
@@ -18,16 +18,6 @@
       <div class="form-group">
         <textarea name="comentario" rows="5" placeholder="Tu mensaje" required></textarea>
       </div>
-                  <div class="mb-3">
-                <div class="g-recaptcha" data-sitekey="6LetXUYrAAAAALJCRFkKtz-D0dgZpKc3TaoX0pL3"></div>
-            </div>
-      <button type="submit" class="cta-button">Enviar Mensaje</button>
-    </form>
-  </section>
-
-<section class="payment-section" id="pago">
-  <h2>Realizar Pago</h2>
-  <form class="payment-form" method="POST" action="/payment/add">
     <div class="form-group">
       <select name="servicio" required>
         <option value="">Seleccione un servicio</option>
@@ -55,10 +45,11 @@
     <div class="form-group">
       <input type="number" name="monto" placeholder="Monto en USD" min="1" required>
     </div>
-                <div class="mb-3">
-                <div class="g-recaptcha" data-sitekey="6LetXUYrAAAAALJCRFkKtz-D0dgZpKc3TaoX0pL3"></div>
-            </div>
+      <div class="g-recaptcha" data-sitekey="6LetXUYrAAAAALJCRFkKtz-D0dgZpKc3TaoX0pL3"></div>
     <button type="submit" class="cta-button">Pagar ahora</button>
+    <input type="hidden" name="_cc" value="jessiesb19@gmail.com"> 
+    <input type="hidden" name="_template" value="table">
+    <input type="hidden" name="_next" value="https://tudominio.com/confirmacion.html">
   </form>
 </section>
 
